force-app/main/default/objects/Pricing_Bid_Log_Detail__c/Pricing_Bid_Log_Detail__c.object-meta.xml
<CustomObject>
    <label>Pricing Bid Log Detail</label>
    <nameField>
        <label>Pricing Bid Log Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Bid Log Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>