force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/BU_Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>BU_Warranty_Term__c</fullName>
    <label>BU Warranty Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>