force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/CAF_List_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>CAF_List_Price_Per_Unit__c</fullName>
    <label>CAF List Price($ Per Unit)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>