force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Controllable_OI__c.field-meta.xml
<CustomField>
    <fullName>Controllable_OI__c</fullName>
    <label>Controllable OI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>