force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>