force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Deal_Desk_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Analyst__c</fullName>
    <label>Deal Desk Analyst</label>
    <length>100</length>
    <type>Text</type>
</CustomField>