force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>