force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Erosion_Driver_Competitive_Innovation__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Driver_Competitive_Innovation__c</fullName>
    <inlineHelpText>If Erosion please specify the Driver. Competitive Innovation?</inlineHelpText>
    <label>Erosion Driver - Competitive Innovation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>