force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Erosion_Driver_Cost_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Driver_Cost_Pressure__c</fullName>
    <inlineHelpText>If Erosion please specify the Driver. Customer Cost Pressure?</inlineHelpText>
    <label>Erosion Driver - Cost Pressure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>