force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Erosion_Driver_NCR_Performance__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Driver_NCR_Performance__c</fullName>
    <inlineHelpText>If Erosion please specify the Driver. NCR Performance?</inlineHelpText>
    <label>Erosion Driver - NCR Performance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>