force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Erosion_Driver_Unhappy_with_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Driver_Unhappy_with_Incumbent__c</fullName>
    <inlineHelpText>If Erosion please specify the Driver. Unhappy with Competitor incumbent?</inlineHelpText>
    <label>Erosion Driver - Unhappy with Incumbent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>