force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Erosion_Driver_Unhappy_with_NCR_service__c.field-meta.xml
<CustomField>
    <fullName>Erosion_Driver_Unhappy_with_NCR_service__c</fullName>
    <inlineHelpText>If Erosion please specify the Driver. Unhappy with NCR service delivery design?</inlineHelpText>
    <label>Erosion Driver -Unhappy with NCR service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>