force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/GM_Only__c.field-meta.xml
<CustomField>
    <fullName>GM_Only__c</fullName>
    <label>GM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>