force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Installation_Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Installation_Total_Qty__c</fullName>
    <label>Installation Total Qty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>