force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Installation_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Installation_Unit_Cost__c</fullName>
    <label>Installation Unit Cost</label>
    <length>100</length>
    <type>Text</type>
</CustomField>