force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <label>Net Price ($)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>