force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Price_Erosion_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Erosion_Price_Change__c</fullName>
    <inlineHelpText>If Erosion Type &quot;Price&quot;, what Price Change in % (Year 0 vs Year 1)</inlineHelpText>
    <label>Price Erosion(Price Change)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>