force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Pricing_Bid_Log__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Bid_Log__c</fullName>
    <label>Pricing Bid Log</label>
    <type>MasterDetail</type>
</CustomField>