force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Regular_Charge_Unit_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Regular_Charge_Unit_Total_Discount__c</fullName>
    <label>Regular Charge Unit Total Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>