force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Scope_Erosion_GM_Change_USD__c.field-meta.xml
<CustomField>
    <fullName>Scope_Erosion_GM_Change_USD__c</fullName>
    <inlineHelpText>If Erosion Type &quot;Scope&quot;, what GM Change in USD (Year 0 vs Year 1)</inlineHelpText>
    <label>Scope Erosion (GM Change USD)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>