force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Select_Erosion_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_Erosion_Type__c</fullName>
    <label>Select Erosion Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>