force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/ServiceNow_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Opportunity_Number__c</fullName>
    <label>ServiceNow Opportunity Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>