force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <label>SID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>