force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/SLA_Description__c.field-meta.xml
<CustomField>
    <fullName>SLA_Description__c</fullName>
    <label>SLA Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>