force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Standard_GM__c.field-meta.xml
<CustomField>
    <fullName>Standard_GM__c</fullName>
    <label>Standard GM (%)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>