force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Total_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Revenue__c</fullName>
    <label>Total Net Revenue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>