force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Total_Quantity_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Labor_Hours__c</fullName>
    <label>Total Quantity (Labor Hours)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>