force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Upgrade_Unit_Extended_Net__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Unit_Extended_Net__c</fullName>
    <label>Upgrade Unit Extended Net $</label>
    <length>100</length>
    <type>Text</type>
</CustomField>