force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/Upgrade_Unit_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Unit_Total_Discount__c</fullName>
    <label>Upgrade Unit Total Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>