force-app/main/default/objects/Pricing_Bid_Log_Detail__c/fields/WOT__c.field-meta.xml
<CustomField>
    <fullName>WOT__c</fullName>
    <label>WOT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>