force-app/main/default/objects/Pricing_Bid_Log_Detail__c/recordTypes/Services_Bid_Log.recordType-meta.xml
<RecordType>
    <fullName>Services_Bid_Log</fullName>
    <active>true</active>
    <label>Services Bid Log</label>
</RecordType>